[tool.poetry]
name = "httpie-escher-auth"
version = "0.1.0"
description = ""
authors = ["Julien Barbot <jubarbot@cisco.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpie = "^2.4.0"
escherauth = {git = "https://github.com/klyr/escher-python.git", rev = "scn"}

[tool.poetry.dev-dependencies]
[tool.poetry.plugins."httpie.plugins.auth.v1"]
httpie_escher_auth = "httpie_escher_auth:EscherAuthPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
